@@ -4,10 +4,10 @@ import com.google.gson.JsonObject;
 import com.google.gson.annotations.Expose;
 import lombok.Data;
 import lombok.NonNull;
-import net.minecraft.item.ItemStack;
-import net.minecraft.item.Items;
-import net.minecraft.potion.EffectInstance;
-import net.minecraft.potion.Effects;
+import net.minecraft.world.effect.MobEffectInstance;
+import net.minecraft.world.effect.MobEffects;
+import net.minecraft.world.item.ItemStack;
+import net.minecraft.world.item.Items;
 import xin.vanilla.mc.enums.ERewardType;
 import xin.vanilla.mc.rewards.Reward;
 import xin.vanilla.mc.rewards.RewardList;
@@ -20,7 +20,6 @@ import java.io.Serializable;
 import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 @Data
 public class RewardOptionData implements Serializable {
@@ -176,7 +175,7 @@ public class RewardOptionData implements Serializable {
         // 处理映射关系
         if (!continuousRewards.isEmpty()) {
             this.continuousRewardsRelation = new LinkedHashMap<>();
-            List<Integer> keyList = continuousRewards.keySet().stream().map(Integer::parseInt).sorted().collect(Collectors.toList());
+            List<Integer> keyList = continuousRewards.keySet().stream().map(Integer::parseInt).sorted().toList();
             int max = keyList.stream().max(Comparator.naturalOrder()).orElse(0);
             int cur = keyList.get(0);
             for (int i = 1; i <= max; i++) {
@@ -211,7 +210,7 @@ public class RewardOptionData implements Serializable {
         // 处理映射关系
         if (!cycleRewards.isEmpty()) {
             this.cycleRewardsRelation = new LinkedHashMap<>();
-            List<Integer> keyList = cycleRewards.keySet().stream().map(Integer::parseInt).sorted().collect(Collectors.toList());
+            List<Integer> keyList = cycleRewards.keySet().stream().map(Integer::parseInt).sorted().toList();
             int max = keyList.stream().max(Comparator.naturalOrder()).orElse(0);
             int cur = keyList.get(0);
             for (int i = 1; i <= max; i++) {
@@ -356,7 +355,7 @@ public class RewardOptionData implements Serializable {
                     setType(ERewardType.ITEM);
                 }});
             }});
-            setContinuousRewards(new LinkedHashMap<String, RewardList>() {{
+            setContinuousRewards(new LinkedHashMap<>() {{
                 put("1", new RewardList() {{
                     add(new Reward() {{
                         setContent(new ExpPointRewardParser().serialize(5));
@@ -376,7 +375,7 @@ public class RewardOptionData implements Serializable {
                     }});
                 }});
             }});
-            setCycleRewards(new LinkedHashMap<String, RewardList>() {{
+            setCycleRewards(new LinkedHashMap<>() {{
                 put("2", new RewardList() {{
                     add(new Reward() {{
                         setContent(new ExpPointRewardParser().serialize(3));
@@ -392,21 +391,21 @@ public class RewardOptionData implements Serializable {
             }});
             setYearRewards(new LinkedHashMap<>());
             setMonthRewards(new LinkedHashMap<>());
-            setWeekRewards(new LinkedHashMap<String, RewardList>() {{
+            setWeekRewards(new LinkedHashMap<>() {{
                 put("6", new RewardList() {{
                     add(new Reward() {{
-                        setContent(new EffectRewardParser().serialize(new EffectInstance(Effects.LUCK, 6000, 1)));
+                        setContent(new EffectRewardParser().serialize(new MobEffectInstance(MobEffects.LUCK, 6000, 1)));
                         setType(ERewardType.EFFECT);
                     }});
                 }});
                 put("7", new RewardList() {{
                     add(new Reward() {{
                         // 急促
-                        setContent(new EffectRewardParser().serialize(new EffectInstance(Effects.HEAL, 6000, 0)));
+                        setContent(new EffectRewardParser().serialize(new MobEffectInstance(MobEffects.HEAL, 6000, 0)));
                         setType(ERewardType.EFFECT);
                     }});
                     add(new Reward() {{
-                        setContent(new EffectRewardParser().serialize(new EffectInstance(Effects.JUMP, 6000, 0)));
+                        setContent(new EffectRewardParser().serialize(new MobEffectInstance(MobEffects.JUMP, 6000, 0)));
                         setType(ERewardType.EFFECT);
                     }});
                     add(new Reward() {{
@@ -415,22 +414,22 @@ public class RewardOptionData implements Serializable {
                     }});
                 }});
             }});
-            setDateTimeRewards(new LinkedHashMap<String, RewardList>() {{
+            setDateTimeRewards(new LinkedHashMap<>() {{
                 put("0000-10-06~1", new RewardList() {{
                     add(new Reward() {{
                         setContent(new ItemRewardParser().serialize(new ItemStack(Items.EXPERIENCE_BOTTLE, 1)));
                         setType(ERewardType.ITEM);
                     }});
                     add(new Reward() {{
-                        setContent(new EffectRewardParser().serialize(new EffectInstance(Effects.DAMAGE_RESISTANCE, 300, 1)));
+                        setContent(new EffectRewardParser().serialize(new MobEffectInstance(MobEffects.DAMAGE_RESISTANCE, 300, 1)));
                         setType(ERewardType.EFFECT);
                     }});
                 }});
             }});
-            setCumulativeRewards(new LinkedHashMap<String, RewardList>() {{
+            setCumulativeRewards(new LinkedHashMap<>() {{
                 put("100", new RewardList() {{
                     add(new Reward() {{
-                        setContent(new EffectRewardParser().serialize(new EffectInstance(Effects.LUCK, 99999, 2)));
+                        setContent(new EffectRewardParser().serialize(new MobEffectInstance(MobEffects.LUCK, 99999, 2)));
                         setType(ERewardType.EFFECT);
                     }});
                 }});
